Adding tests that require CouchDB container